[build-system]
requires = ["setuptools", "wheel"]
# no build-backend given should cause legacy install
#  when used with `--no-use-pep517`:
#  pip install --no-use-pep517 -e .

[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
ignore_missing_imports = true
# this list shall slowly grow until it covers the whole codebase.
files = [
    "src",
]
mypy_path = "stubs"
namespace_packages = true

# global rules
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
no_strict_optional = true

# stricter rules
[[tool.mypy.overrides]]
module = [
    "hades.bin.*",
]
disallow_untyped_defs = true
disallow_untyped_globals = true
#disallow_untyped_calls = true
#disallow_untyped_decorators = true
